# CS100-AImovie-recommender

./: CMakeLists.txt  README.md  addMovie.cpp  addMovie.hpp  criticsRatingCatalog.cpp  criticsRatingCatalog.hpp  directorCatalog.cpp  directorCatalog.hpp  foundersRecommend.cpp  foundersRecommend.hpp  genreCatalog.cpp  genreCatalog.hpp  library.cpp  library.hpp  main.cpp  movie.cpp  movie.hpp  movielist.txt  recommend.cpp  recommend.hpp  releaseYearCatalog.cpp  releaseYearCatalog.hpp  test.cpp
